// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`GridFloatingMenu > should render when edit mode is enabled 1`] = `
"<div id="test-wrapper">
  <div class="fixed z-50 flex animate-fade-in gap-6 overflow-hidden rounded-full bg-neutral-100 p-3 shadow-neutral-drop-shadow duration-300 ease-in-out sm:bottom-10 sm:right-10 sm:flex-col sm:transition lg:right-[calc(50%-540px)] right-[calc(50%-160px)] h-[64px] w-[320px] sm:h-[320px] sm:w-[64px]" style="bottom: 40px; transition: all 0.3s ease-in-out;">
    <div class="flex animate-fade-in gap-6 sm:flex-col">
      <!-- Add widget  -->
      <lukso-tooltip class="flex size-10 items-center justify-center rounded-full transition-all duration-300 bg-neutral-97 cursor-pointer hover:scale-105 hover:bg-neutral-95" text="Add widget" placement="left" offset="15" show-delay="1000">
        <lukso-icon name="plus" color="purple-41"></lukso-icon>
      </lukso-tooltip><!-- Add grid  -->
      <lukso-tooltip class="flex size-10 items-center justify-center rounded-full transition-all duration-300 bg-neutral-97 cursor-pointer hover:scale-105 hover:bg-neutral-95" text="Add grid" placement="left" offset="15" show-delay="1000">
        <lukso-icon name="add-grid" color="purple-41"></lukso-icon>
      </lukso-tooltip><!-- Reset  -->
      <lukso-tooltip class="flex size-10 items-center justify-center rounded-full transition-all duration-300 bg-neutral-97" text="" placement="left" offset="15" show-delay="1000">
        <lukso-icon name="reload" color="neutral-85" class="-rotate-90 transition"></lukso-icon>
      </lukso-tooltip><!-- Save  -->
      <lukso-tooltip class="flex size-10 items-center justify-center rounded-full transition-all duration-300 bg-neutral-97" text="" placement="left" offset="15" show-delay="1000">
        <lukso-icon name="tick" color="neutral-85" class=""></lukso-icon>
      </lukso-tooltip>
    </div><!-- Edit mode toggle -->
    <lukso-tooltip class="flex size-10 items-center justify-center rounded-full transition-all duration-300 bg-neutral-97 cursor-pointer hover:scale-105 hover:bg-neutral-95" text="Exit edit mode" placement="left" offset="15" show-delay="1000">
      <lukso-icon name="close-lg" color="purple-41"></lukso-icon>
    </lukso-tooltip>
  </div>
</div>"
`;

exports[`GridFloatingMenu > should render when has unsaved changes 1`] = `
"<div id="test-wrapper">
  <div class="fixed z-50 flex animate-fade-in gap-6 overflow-hidden rounded-full bg-neutral-100 p-3 shadow-neutral-drop-shadow duration-300 ease-in-out sm:bottom-10 sm:right-10 sm:flex-col sm:transition lg:right-[calc(50%-540px)] right-[calc(50%-160px)] h-[64px] w-[320px] sm:h-[320px] sm:w-[64px]" style="bottom: 40px; transition: all 0.3s ease-in-out;">
    <div class="flex animate-fade-in gap-6 sm:flex-col">
      <!-- Add widget  -->
      <lukso-tooltip class="flex size-10 items-center justify-center rounded-full transition-all duration-300 bg-neutral-97 cursor-pointer hover:scale-105 hover:bg-neutral-95" text="Add widget" placement="left" offset="15" show-delay="1000">
        <lukso-icon name="plus" color="purple-41"></lukso-icon>
      </lukso-tooltip><!-- Add grid  -->
      <lukso-tooltip class="flex size-10 items-center justify-center rounded-full transition-all duration-300 bg-neutral-97 cursor-pointer hover:scale-105 hover:bg-neutral-95" text="Add grid" placement="left" offset="15" show-delay="1000">
        <lukso-icon name="add-grid" color="purple-41"></lukso-icon>
      </lukso-tooltip><!-- Reset  -->
      <lukso-tooltip class="flex size-10 items-center justify-center rounded-full transition-all duration-300 cursor-pointer bg-[#ffe0e0] hover:scale-105 hover:bg-[#ffd1d1]" text="Reset changes" placement="left" offset="15" show-delay="1000">
        <lukso-icon name="reload" color="red-65" class="-rotate-90 transition"></lukso-icon>
      </lukso-tooltip><!-- Save  -->
      <lukso-tooltip class="flex size-10 items-center justify-center rounded-full transition-all duration-300 cursor-pointer bg-[#E2FFEA] hover:scale-105 hover:bg-[#d6ffe2]" text="Save changes" placement="left" offset="15" show-delay="1000">
        <lukso-icon name="tick" color="green-54" class=""></lukso-icon>
      </lukso-tooltip>
    </div><!-- Edit mode toggle -->
    <lukso-tooltip class="flex size-10 items-center justify-center rounded-full transition-all duration-300 bg-neutral-97 cursor-pointer hover:scale-105 hover:bg-neutral-95" text="Exit edit mode" placement="left" offset="15" show-delay="1000">
      <lukso-icon name="close-lg" color="purple-41"></lukso-icon>
    </lukso-tooltip>
  </div>
</div>"
`;

exports[`GridFloatingMenu > should render when user is connected 1`] = `
"<div id="test-wrapper">
  <div class="fixed z-50 flex animate-fade-in gap-6 overflow-hidden rounded-full bg-neutral-100 p-3 shadow-neutral-drop-shadow duration-300 ease-in-out sm:bottom-10 sm:right-10 sm:flex-col sm:transition lg:right-[calc(50%-540px)] right-4 size-[64px]" style="bottom: 40px; transition: all 0.3s ease-in-out;">
    <!--v-if-->
    <!-- Edit mode toggle -->
    <lukso-tooltip class="flex size-10 items-center justify-center rounded-full transition-all duration-300 bg-neutral-97 cursor-pointer hover:scale-105 hover:bg-neutral-95" text="Enable edit mode" placement="left" offset="15" show-delay="1000">
      <lukso-icon name="edit" color="purple-41"></lukso-icon>
    </lukso-tooltip>
  </div>
</div>"
`;

exports[`GridFloatingMenu > should render when user is not connected 1`] = `
"<div id="test-wrapper">
  <!--v-if-->
</div>"
`;
